2026_Spring/lab3/project_1_true/hls/.autopilot/db/top.pp.0.cpp.clang-tidy.loop-label.out.log
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:2269:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:2269:5: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:2283:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:2283:5: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:2297:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:2297:5: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:4253:7: warning: Added loop label VITIS_LOOP_1248_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1248_1: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:4253:7: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6679:2: warning: Added loop label VITIS_LOOP_137_1:   [xilinx-label-all-loops]
 for (int k = 0; k < 16; k++) {
 ^~~
 VITIS_LOOP_137_1: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6679:2: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6699:9: warning: Added loop label VITIS_LOOP_157_1:   [xilinx-label-all-loops]
        for (int k = 0; k < 16; k++) {
        ^~~
        VITIS_LOOP_157_1: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6699:9: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6712:5: warning: Added loop label VITIS_LOOP_170_1:   [xilinx-label-all-loops]
    for (int k = 0; k < (1 << 16) / 16; k++) {
    ^~~
    VITIS_LOOP_170_1: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6712:5: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6716:9: warning: Added loop label VITIS_LOOP_174_2:   [xilinx-label-all-loops]
        for (int i = 0; i < 16; i++) {
        ^~~
        VITIS_LOOP_174_2: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6716:9: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6725:5: warning: Added loop label VITIS_LOOP_183_1:   [xilinx-label-all-loops]
    for (int k = 0; k < (1 << 16) / 16; k++) {
    ^~~
    VITIS_LOOP_183_1: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6725:5: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6735:5: warning: Added loop label VITIS_LOOP_193_1:   [xilinx-label-all-loops]
    for (int k = 0; k < (1 << 16) / 16; k++) {
    ^~~
    VITIS_LOOP_193_1: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6735:5: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6739:9: warning: Added loop label VITIS_LOOP_197_2:   [xilinx-label-all-loops]
        for (int i = 0; i < 16; i++) {
        ^~~
        VITIS_LOOP_197_2: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6739:9: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6754:5: warning: Added loop label VITIS_LOOP_212_1:   [xilinx-label-all-loops]
    for (int b = 0; b < ((1 << 16) / 256); b++) {
    ^~~
    VITIS_LOOP_212_1: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6754:5: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6756:9: warning: Added loop label VITIS_LOOP_214_2:   [xilinx-label-all-loops]
        for (int i = 0; i < 256 / 16; i++) {
        ^~~
        VITIS_LOOP_214_2: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6756:9: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6759:13: warning: Added loop label VITIS_LOOP_217_3:   [xilinx-label-all-loops]
            for (int j = 0; j < 16; j++) {
            ^~~
            VITIS_LOOP_217_3: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6759:13: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6772:5: warning: Added loop label VITIS_LOOP_230_1:   [xilinx-label-all-loops]
    for (int b = 0; b < ((1 << 16) / 256); b++) {
    ^~~
    VITIS_LOOP_230_1: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6772:5: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6776:9: warning: Added loop label VITIS_LOOP_234_2:   [xilinx-label-all-loops]
        for (int i = 0; i < 256 / 16; i++) {
        ^~~
        VITIS_LOOP_234_2: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6776:9: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6780:13: warning: Added loop label VITIS_LOOP_238_3:   [xilinx-label-all-loops]
            for (int j = 0; j < 16; j++) {
            ^~~
            VITIS_LOOP_238_3: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6780:13: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6790:5: warning: Added loop label VITIS_LOOP_248_1:   [xilinx-label-all-loops]
    for (int k = 0; k < (1 << 16) / 16; k++) {
    ^~~
    VITIS_LOOP_248_1: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6790:5: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6794:9: warning: Added loop label VITIS_LOOP_252_2:   [xilinx-label-all-loops]
        for (int i = 0; i < 16; i++) {
        ^~~
        VITIS_LOOP_252_2: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6794:9: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6823:45: error: Invalid Directive: for current device, fifo + srl is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS bind_storage variable=s0_a type=fifo impl=srl
                                            ^
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6824:43: error: Invalid Directive: for current device, fifo + srl is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS bind_storage variable=s1 type=fifo impl=srl
                                          ^
